# fextapi

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/faxtapi/: __init__.py
src/faxtapi/cli/: __init__.py  init.py  main.py  run.py
src/faxtapi/cli/templates/: README.md.template  main.py.template  pyproject.toml.template  route.py.template
src/faxtapi/router/: __init__.py  loader.py  registry.py  scanner.py
src/faxtapi/utils/: __init__.py  path.py
src/fextapi/cli/: __init__.py  init.py
src/fextapi/cli/templates/: README.md.template  main.py.template  route.py.template
src/fextapi/router/: registry.py  scanner.py
src/fextapi/utils/: path.py
