[project]
name = "faxtapi"
version = "0.1.10"
description = "File-system based routing for FastAPI"
readme = "README.md"
authors = [
    { name = "Faxtapi Team", email = "sk20220@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]
keywords = ["fastapi", "routing", "api", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]

[project.urls]
Homepage = "https://github.com/johnnydddd/faxtapi"
Repository = "https://github.com/johnnydddd/faxtapi"
Documentation = "https://github.com/johnnydddd/faxtapi#readme"

[project.scripts]
faxtapi = "faxtapi.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faxtapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
